--- a/index.html
+++ b/index.html
@@ -805,7 +805,7 @@
                     
                     <div class="telegram-contact">
                         <i class="fab fa-telegram telegram-icon"></i>
-                        <div class="telegram-handle">@FootballProSupport</div>
+                        <div class="telegram-handle">@futgenix</div>
                         <p class="telegram-description">Contact us directly on Telegram for the fastest response. We're available to help with any questions about the app, technical support, or feedback.</p>
                         <a href="https://t.me/futgenix" class="btn btn-telegram" target="_blank">
                             <i class="fab fa-telegram"></i>
@@ -823,7 +823,7 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <h3>GOLAZO - Football Pro</h3>
-                    <p>The ultimate companion for football fans. Stay connected to the game you love with real-time updates, stats, and personalized content.</p>
+                    <p>Important Notice & Disclaimer: GOLAZO - Football Pro is an indexing application. All content provided within the app is sourced from links that are freely available on the public internet. We do not host, create, or upload any video or media files. Our service is to organize and provide easy access to this content. Users are responsible for ensuring they have the legal right to view the content in their respective countries.</p>
                     <div class="social-icons">
                         <a href="https://t.me/futgenix" target="_blank" id="footerTelegramBtn"><i class="fab fa-telegram"></i></a>
                     </div>
